websec_challenge/service.yml
apiVersion: v1
kind: Service
metadata:
  name: websec-challenge
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
  selector:
    app: websec-challenge
