websec_challenge/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: websec-challenge
  namespace: default
spec:
  tls:
    - hosts:
        - maggus-social.lab.lcarilla.de
      secretName: websec-challenge-cert
  rules:
    - host: "maggus-social.lab.lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: websec-challenge
                port:
                  number: 80
